--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "shadcn-ui": "^0.9.3",
